part2: autowired, primary, qualifier

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>part1_component_autowired</module>
+        <module>part2_autowired_primary_qualifier</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
