--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>part1_component_autowired</module>
         <module>part2_autowired_primary_qualifier</module>
+        <module>part3_bean_life_cycle_postconstruct_predestroy</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
