part5: component scan

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>part2_autowired_primary_qualifier</module>
         <module>part3_bean_life_cycle_postconstruct_predestroy</module>
         <module>part4_component_service_repository</module>
+        <module>part5_component_scan</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
