part9: thymeleaf expression

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>part6_configuration_bean</module>
         <module>part7_application_config_value</module>
         <module>part8_controller_thymeleaf</module>
+        <module>part9_thymeleaf_expression</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -54,6 +55,13 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
