part11: springjpa, mysql

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>part8_controller_thymeleaf</module>
         <module>part9_thymeleaf_expression</module>
         <module>part10_requestmapping_postmapping_modelattribute_requestparam</module>
+        <module>part11_spring_jpa_mysql</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
