--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>part9_thymeleaf_expression</module>
         <module>part10_requestmapping_postmapping_modelattribute_requestparam</module>
         <module>part11_spring_jpa_mysql</module>
+        <module>part12_spring_jpa_method_query</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
