part15: exceptionhandler, restcontrolleradvice, controlleradvice, responsestatus

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>part12_spring_jpa_method_query</module>
         <module>part13_todo_app</module>
         <module>part14_restful_api_restcontroller_pathvariable_requestbody</module>
+        <module>part15_exceptionhandler_restcontrolleradvice_controlleradvice_responsestatus</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
