part17: spring profile

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>part14_restful_api_restcontroller_pathvariable_requestbody</module>
         <module>part15_exceptionhandler_restcontrolleradvice_controlleradvice_responsestatus</module>
         <module>part16_configurationproperties</module>
+        <module>part17_spring_profile</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
